# faifa

./: .gitignore  COPYING  LICENCE.OpenSSL  Makefile  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure.ac  configure.in  copyright  crc32.h  crypto.c  crypto.h  device.h  endian.h  faifa.8  faifa.c  faifa.h  faifa.h.8  faifa_compat.h  faifa_priv.h  frame.c  frame.h  homeplug.h  homeplug_av.h  hpav_cfg.c  main.c  sha2.c  sha2.h  simulator.c
debian/: README.source  changelog  control  copyright  files  libfaifa-dev.install  libfaifa0.install  libfaifa0.substvars  orig-tar.exclude  orig-tar.sh  rules  watch
